--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.namics.oss</groupId>
+    <groupId>com.namics.oss.spring.support.logging</groupId>
     <artifactId>spring-logging-support-pom</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -75,12 +75,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.namics.oss</groupId>
+                <groupId>com.namics.oss.spring.support.logging</groupId>
                 <artifactId>spring-logging-support</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.namics.oss</groupId>
+                <groupId>com.namics.oss.spring.support.logging</groupId>
                 <artifactId>spring-logging-support-starter</artifactId>
                 <version>${project.version}</version>
             </dependency>
