--- a/spring-logging-support-samples/spring-logging-support-samples-javaconfig/pom.xml
+++ b/spring-logging-support-samples/spring-logging-support-samples-javaconfig/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.namics.oss</groupId>
+        <groupId>com.namics.oss.spring.support.logging</groupId>
         <artifactId>spring-logging-support-samples</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -30,7 +30,7 @@
 
         <!-- spring logging support configuration -->
         <dependency>
-            <groupId>com.namics.oss</groupId>
+            <groupId>com.namics.oss.spring.support.logging</groupId>
             <artifactId>spring-logging-support</artifactId>
         </dependency>
 
