--- a/spring-logging-support-starter/pom.xml
+++ b/spring-logging-support-starter/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.namics.oss</groupId>
+        <groupId>com.namics.oss.spring.support.logging</groupId>
         <artifactId>spring-logging-support-pom</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.namics.oss</groupId>
+            <groupId>com.namics.oss.spring.support.logging</groupId>
             <artifactId>spring-logging-support</artifactId>
         </dependency>
 
