--- a/spring-logging-support/pom.xml
+++ b/spring-logging-support/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.namics.oss</groupId>
+        <groupId>com.namics.oss.spring.support.logging</groupId>
         <artifactId>spring-logging-support-pom</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
