--- a/spring-logging-support-samples/spring-logging-support-samples-starter/pom.xml
+++ b/spring-logging-support-samples/spring-logging-support-samples-starter/pom.xml
@@ -3,7 +3,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>ccom.namics.oss.spring.support.logging</groupId>
+		<groupId>com.namics.oss.spring.support.logging</groupId>
 		<artifactId>spring-logging-support-samples</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -35,11 +35,11 @@
 
 		<!-- namics-configuration-starter -->
 		<dependency>
-			<groupId>com.namics.oss</groupId>
+			<groupId>com.namics.oss.spring.support.logging</groupId>
 			<artifactId>spring-logging-support-starter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.namics.oss</groupId>
+			<groupId>com.namics.oss.spring.support.logging</groupId>
 			<artifactId>spring-logging-support</artifactId>
 		</dependency>
 	</dependencies>
