--- a/spring-logging-support-starter/pom.xml
+++ b/spring-logging-support-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.namics.oss.spring.support.logging</groupId>
         <artifactId>spring-logging-support-pom</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>spring-logging-support-starter</artifactId>
